[package]
name = "file-backup-aws-s3-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "6.1.1"
notify-debouncer-full = "0.3.1"
aws-config = "0.57.1"
aws-sdk-s3 = "0.35.0"
tokio = { version = "1", features = ["full"] }